--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;500;700&display=swap');
 
 $icon-color: #636363;
 $active-color: #E44126;
