--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -169,7 +169,9 @@ $txt-color: #636363;
     color: $pink;
   }
 }
-
+h1, h2, h3{
+  font-weight: 500;
+}
 
 html, body, h1, h2, h3, h4, h5, h6 {
   font-family: 'Red Rose', cursive;
