--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -1,3 +1,16 @@
+.body {
+  min-width: 1000px; }
+
+.container {
+  width: 1000px;
+  max-width: none !important; }
+  .container .left {
+    width: 650px !important;
+    float: left; }
+  .container .right {
+    width: 350px;
+    float: right; }
+
 .flag li {
   float: unset; }
 
@@ -31,7 +44,14 @@
   border-bottom: 1px solid #ccc; }
 
 .header-style02 {
-  background: #0e2b3d; }
+  background: #0e2b3d;
+  width: 1000px; }
+  .header-style02 .navbar-header {
+    width: fit-content;
+    float: left; }
+  .header-style02 .navbar-nav {
+    display: flex !important;
+    float: left; }
   .header-style02 ul li a {
     color: white !important; }
   .header-style02 ul li .dropdown-menu {
@@ -52,7 +72,8 @@
     background-color: #0e2b3d;
     padding: 10px;
     color: white;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    font-size: 20px; }
 
 .box-product-slider {
   border-radius: 10px;
@@ -113,7 +134,8 @@
     margin-bottom: 0;
     background-color: #0e2b3d;
     padding: 10px;
-    color: white; }
+    color: white;
+    font-size: 20px; }
   .box-vertical .box-vertical-slider {
     overflow: hidden;
     width: 100%;
@@ -193,13 +215,15 @@
     margin-bottom: 0;
     background-color: #0e2b3d;
     padding: 10px;
-    color: white; }
+    color: white;
+    font-size: 20px; }
 
 .text-center {
   text-align: center; }
 
 #footer-wrapper.footer-light {
-  border-top: unset; }
+  border-top: unset;
+  width: 1000px; }
   #footer-wrapper.footer-light .heading {
     margin-bottom: 0;
     background: #0e2b3d;
