--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -45,7 +45,8 @@
 
 .header-style02 {
   background: #0e2b3d;
-  width: 1000px; }
+  width: 1000px;
+  margin: auto; }
   .header-style02 .navbar-header {
     width: fit-content;
     float: left; }
@@ -223,7 +224,8 @@
 
 #footer-wrapper.footer-light {
   border-top: unset;
-  width: 1000px; }
+  width: 1000px;
+  margin: auto; }
   #footer-wrapper.footer-light .heading {
     margin-bottom: 0;
     background: #0e2b3d;
