--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -45,8 +45,10 @@
 
 .header-style02 {
   background: #0e2b3d;
-  width: 1000px;
   margin: auto; }
+  .header-style02 #quick-links {
+    display: flex;
+    justify-content: flex-end; }
   .header-style02 .navbar-header {
     width: fit-content;
     float: left; }
@@ -224,7 +226,6 @@
 
 #footer-wrapper.footer-light {
   border-top: unset;
-  width: 1000px;
   margin: auto; }
   #footer-wrapper.footer-light .heading {
     margin-bottom: 0;
