--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -309,6 +309,7 @@ $primary-color: rgb(14, 43, 61);
       font-size: 16px;
 
       a {
+        font-size: 14px;
         color: black;
       }
     }
