--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -211,6 +211,7 @@
     .box-post .content li {
       font-size: 16px; }
       .box-post .content li a {
+        font-size: 14px;
         color: black; }
   .box-post .box-title {
     border-top-left-radius: 10px;
