--- a/frontend/usvn/web/css/custom.css
+++ b/frontend/usvn/web/css/custom.css
@@ -222,6 +222,26 @@
     color: white;
     font-size: 20px; }
 
+.item-post {
+  border-bottom: solid 1px #ccc;
+  margin-bottom: 10px;
+  padding-bottom: 10px; }
+  .item-post .img-item {
+    margin-right: 10px;
+    width: 120px;
+    height: 100%;
+    max-height: 100px;
+    display: flex; }
+    .item-post .img-item img {
+      border-radius: 3px;
+      border: solid 2px silver;
+      display: flex;
+      object-fit: cover;
+      object-position: center center; }
+  .item-post .txt p {
+    padding-bottom: 0;
+    color: black; }
+
 .text-center {
   text-align: center; }
 
