--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -330,7 +330,7 @@ $primary-color: rgb(14, 43, 61);
   border-bottom: solid 1px #ccc;
   margin-bottom: 10px;
   padding-bottom: 10px;
-  .img-item {
+  .img-item a {
     margin-right: 10px;
     width: 120px;
     height: 100%;
