--- a/frontend/usvn/web/css/custom.scss
+++ b/frontend/usvn/web/css/custom.scss
@@ -71,7 +71,7 @@ $primary-color: rgb(14, 43, 61);
 
 .header-style02 {
   background: $primary-color;
-  // width: 1000px;
+  width: 1000px;
   margin: auto;
 
   #quick-links {
@@ -330,6 +330,7 @@ $primary-color: rgb(14, 43, 61);
   border-bottom: solid 1px #ccc;
   margin-bottom: 10px;
   padding-bottom: 10px;
+
   .img-item a {
     margin-right: 10px;
     width: 120px;
@@ -360,7 +361,7 @@ $primary-color: rgb(14, 43, 61);
 
 #footer-wrapper.footer-light {
   border-top: unset;
-  // width: 1000px;
+  width: 1000px;
   margin: auto;
 
   .heading {
