--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -169,7 +169,8 @@ $txt-color: #636363;
     color: $pink;
   }
 }
-h1, h2, h3{
+
+h1, h2, h3 {
   font-weight: 500;
 }
 
@@ -208,7 +209,13 @@ nav {
   }
 
   p.bold {
-    margin-top: 5px;
+    //margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  p.small {
+    margin: 0;
+    font-size: 14px;
   }
 }
 
