--- a/frontend/vietau/web/css/custom.css
+++ b/frontend/vietau/web/css/custom.css
@@ -12,8 +12,19 @@
 .nivo-caption {
   display: none; }
 
+.single_portfolio .single_portfolio_thumb {
+  max-height: 291px;
+  overflow: hidden;
+  height: 291px; }
+  .single_portfolio .single_portfolio_thumb img {
+    display: flex;
+    object-fit: cover; }
+
 .astute-single-blog_adn .astute-blog-thumb_adn a {
-  max-height: 235px; }
+  min-height: 290px;
+  height: 100%;
+  max-height: 290px;
+  overflow: hidden; }
   .astute-single-blog_adn .astute-blog-thumb_adn a img {
     display: flex;
     object-fit: cover; }
@@ -42,9 +53,11 @@
 .astute-header-top, .astute-tab li.active a, .astute-tab li a:hover, .panel-heading1.active {
   background: #21409a; }
 
-.astute_nav_area.prefix {
-  background: white;
+.astute-main-menu {
   border-bottom: solid 2px #21409a; }
+
+.astute_nav_area.prefix {
+  background: white; }
   .astute_nav_area.prefix.scroll_fixed {
     box-shadow: 10px 0 10px 0 rgba(0, 0, 0, 0.1); }
   .astute_nav_area.prefix .astute_menu > ul > li > a {
